2006-09-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: dialog_connection: Use underline mnemonics for the labels 
	and mark them as labels for the entries, for accessibility. Also use an underline 
	mnemonic for the Connect button. Bug #349357 from Ryan Paul.

2006-09-09  Fryderyk Dziarmagowski  <freetz@gmx.net>

	* configure.in: Added update-mime-database configure option which sets/unsets UPDATE_MIME_DATABASE.
	* Makefile.am: Do not update the mime database if UPDATE_MIME_DATABASE is not set.
	This is apparently helpful for distro packagers, and other GNOME source tarballs have the same thing.
	Bug #351989.

2006-09-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: insert_example_data(): Use the new ignore_quoted_separators 
	option with Utils::string_separate() so we are not confused by nested newlines. 
	And check for newlines in the resulting row so we can ignore those rows as errors.
	* glom/libglom/utils.cc: string_separate(): More efficient implementation when ignoring 
	quoted separators, doing less memory copying.

2006-09-08  Johannes Schmid <jhs@gnome.org>

	* glom/utility_widgets/datawidget.cc: DataWidget::on_button_choose_date():
	Fixed #349359 (Dates added with the calendar dialog are not preserved), by 
	emitting the edited signal.

2006-08-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/utils.cc:
	* glom/libglom/utils.h: separate_strings(): Added optional 
	ignore_quoted_separators bool parameter. Added incredibly slow 
	implementation, allowing us to handle example_rows data with 
	newlines in text data. This is necessary because the newlines are also 
	used to separate the field values. This is really slow and must be 
	improved.

2006-08-15  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.cc: on_button_new(): Do not 
	dereference a null field, to avoid crashing when adding a record when 
	there is no primary key.

2006-08-15  Murray Cumming  <murrayc@murrayc.com>
